syntax = "proto3";

package test;

message TestMessage {
    string text = 1;
}

message AnotherTestMessage {
    string email = 1;
}

service TestService {
    rpc RpcTest (TestMessage) returns (TestMessage);
    rpc ServerStreamTest (TestMessage) returns (stream TestMessage);
    rpc ClientStreamTest (stream TestMessage) returns (TestMessage);
    rpc BiDirStreamTest (stream TestMessage) returns (stream TestMessage);
}
